# scylla-machine-image

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AGENTS.md  Makefile  README.md  SCYLLA-VERSION-GEN  SETUP.md  pyproject.toml  pytest.ini  renovate.json  test-requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: auto-backport.py  search_commits.py
.github/workflows/: add-label-when-promoted.yaml  build-cloud-image.yaml  build.yml  call_jira_status_in_progress.yml  call_jira_status_in_review.yml  call_jira_status_ready_for_merge.yml  call_sync_milestone_to_jira.yml  check-jenkins-status.yaml  check-pr-source-branch.yaml  claude.yml  trigger_jenkins.yaml  update_jira_status_in_progress.yml  update_jira_status_in_review.yml  update_jira_status_ready_for_merge.yml
aws/: .bash_profile  scylla-image-setup.service  scylla_configure.py  scylla_create_devices  scylla_image_setup  scylla_login
aws/ami/: .dockerignore  Dockerfile  Dockerfile_deb  README.md  build_ami.sh  build_deb_ami.sh  build_deb_with_docker.sh  build_with_docker.sh  scylla.json  variables.json.example
aws/ami/files/: 99_user_alias.cfg  elrepo-archive.repo  scylla_install_ami
aws/cloudformation/: Jenkinsfile  README.md  conftest.py  requirements.txt  scylla-aarch64.yaml.j2  scylla.yaml  scylla.yaml.j2  test_scylla_cfn.py
azure/: README
azure/image/: Dockerfile_deb  README.md  build_azure_image.sh  build_azure_with_docker.sh  scylla.json  scylla_azure.json  variables.json
azure/image/files/: scylla_install_azure
common/: aws_io_params.yaml  aws_net_params.json  azure_io_params.yaml  azure_net_params.json  download_authorized_keys  gcp_io_params.yaml  gcp_net_params.json  install_process_exporter.sh  oci_io_params.yaml  oci_net_params.json  process-exporter.service  process-exporter.yml  scylla-cloud-snitch.service  scylla-image-post-start.service  scylla-image-setup.service  scylla_cloud_io_setup  scylla_cloud_snitch  scylla_configure.py  scylla_create_devices  scylla_ec2_check  scylla_image_setup  scylla_login  scylla_post_start.py  scylla_var_tmp_setup
docs/: cloud-image-build-credentials.md  disabled-services-and-purged-packages.md
docs/plans/: INSTRUCTIONS.md  cloud-agent-remote-access-configuration.md  gcp-tier1-networking-detection.md  health-check-optimization.md  hostname-with-uuid.md  time-synchronization-standardization.md
docs/plans/evidence/: detect_tier1.sh  noscope-output.txt  standard-output.txt  tier1-output.txt
gce/: README  scylla_create_devices
gce/image/: build_deb_image.sh  build_image.sh  scylla.json  scylla_gce.json  variables.json.example
gce/image/files/: scylla_install_image
k8s/: Dockerfile  aws_scylla_create_devices  build_image.sh  scylla_k8s_node_setup
lib/: log.py  param_estimation.py  scylla_cloud.py  scylla_cloud_io_setup.py  user_data.py
packer/: Dockerfile  Dockerfile_deb  ami_variables.json  apply_cis_rules  azure_variables.json  build_deb_image.sh  build_deb_with_docker.sh  build_image.sh  build_with_docker.sh  gce_variables.json  iptables.sh  oci_variables.json  remediation-script.sh  scylla.json  scylla_install_image
packer/oci/: OCI_BUILD_GUIDE.md  add_image_shape_compat.sh  generate_oci_net_params.sh  setup_oci_image_capability_schema.sh  setup_oci_packer_user.sh  setup_oci_tags.sh
packer/scripts/: build_deb_image.sh  build_image.sh
scripts/: update
source/: conf.py  contents.rst  index.rst  user_data_v2.rst  user_data_v3.rst
tests/: test_aws_instance.py  test_azure_instance.py  test_chrony_config.py  test_ec2_check_caching.py  test_gcp_instance.py  test_oci_instance.py  test_param_estimation.py  test_scylla_configure.py  test_scylla_create_devices.py  test_scylla_post_start.py
tests/aws/: test_scylla_configure.py
tools/: azure_get_network_speed.py  relocate_python_scripts.py
tools/io_properties_measurements/: README.md  get_scylla_io_properties.py  get_scylla_io_properties_azure.py  get_scylla_io_properties_oci.py  requirements.txt
