[project]
name = "scylla-machine-image"
version = "0.1.0"
description = "Scylla Machine Image - Tools for creating and testing Scylla cloud images"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Scylla Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "distro>=1.9.0",
    "psutil>=7.1.3",
    "PyYAML>=6.0.3",
    "jinja2-cli>=0.8.2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "httpretty>=1.1.4",
    "traceback-with-variables>=2.2.1",
    "packaging>=24.0",
]

aws = [
    "boto3>=1.40.74",
    "botocore>=1.35.74",
]

io-properties = [
    "boto3>=1.42.5",
    "paramiko>=4.0.0",
    "PyYAML>=6.0.3",
    "tabulate>=0.9.0",
    "oci>=2.164.2",
    "azure-identity>=1.15.0",
    "azure-mgmt-compute>=30.3.0",
    "azure-mgmt-network>=25.3.0",
    "azure-mgmt-resource>=23.1.0",
]

dev = [
    "scylla-machine-image[test,aws,io-properties]",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/scylladb/scylla-cloud-image"
Repository = "https://github.com/scylladb/scylla-cloud-image"
Issues = "https://github.com/scylladb/scylla-cloud-image/issues"


[tool.pytest.ini_options]
# Test discovery patterns
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test paths
testpaths = ["tests"]

# Asyncio configuration
asyncio_mode = "auto"

# Markers for test categorization
markers = [
    "integration: Integration tests that create cloud resources (deselect with '-m \"not integration\"')",
    "slow: Slow tests that take significant time to run",
    "validation: Fast validation tests that don't create cloud resources",
    "unit: Unit tests",
    "aws: AWS-specific tests",
    "azure: Azure-specific tests",
    "gcp: GCP-specific tests",
]

# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Test output options
addopts = [
    "--tb=short",
    "--strict-markers",
    "-ra",
    "--color=yes",
]

# Timeout for tests (in seconds)
timeout = 2400

# Capture settings
capture = "no"

# Warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Minimum version
minversion = "7.0"

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.10+
target-version = "py310"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.pyi",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "ISC001", # implicit string concatenation (conflicts with formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from exception
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["lib"]
force-single-line = false
lines-after-imports = 2
